[package]
name = "xframes-rust"
version = "0.1.0"
authors = ["Andrea Mancuso <and.mancuso@googlemail.com>"]
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
libc = "0.2"  # If you haven't added libc already

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3    # Maximum optimization for performance
debug = false
lto = true
panic = "abort"

[[bin]]
name = "main"
path = "main.rs"